<resources>

    <string name="app_name">Express</string>

    <string name="title_activity_main">请选择身份</string>
    <string name="title_activity_custiomer_query">快件查询</string>
    <string name="title_activity_custiomer_home">我是顾客</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_customer_send">请填写快递信息</string>
    <string name="title_activity_customer_send_result">填写完成</string>
    <string name="title_activity_qrcode">扫描二维码</string>
    <string name="title_activity_express_home">我是快递员</string>
    <string name="title_activity_track_position">运送位置记录</string>
    <string name="title_activity_send_message">发送短信</string>
    <string name="title_activity_customer_rcv_qrcode">签收验证</string>
    <string name="title_activity_customer_rcv_message">完成签收</string>
    <string name="title_activity_express_print">保存二维码</string>
    <string name="title_activity_nfcreader">读取NFC数据</string>
    <string name="title_activity_nfcwriter">写入NFC数据</string>
    <string name="welcome">欢迎使用</string>

    <string name="iamexpress">我是快递员</string>
    <string name="iamcustomer">我是顾客</string>

    <!--顾客功能-->
    <string name="iwantsend">我要寄件</string>
    <string name="iwantreceive">我要收件</string>
    <string name="search">查询</string>

    <string name="send_result_notice">请给快递员出示该二维码,或将ID告知快递员，以完成快递收件</string>

    <!--快递员功能-->
    <string name="print_express_paper">打印快递单</string>
    <string name="track_position">运送位置记录</string>
    <string name="send_package_notice">发送取快递通知</string>
    <string name="save_to_storage">保存到本地</string>

    <string name="qrcode">二维码</string>
    <string name="nfc">NFC</string>
    <string name="nfc_notice">请将NFC标签靠近手机背部NFC感应区</string>

    <!--error-->
    <string name="error_nfc_writer">NFC数据有误</string>
    <string name="error_nfc_empty">NFC数据为空</string>

</resources>
